--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.ExpensesFragment">
+    tools:context=".ui.main.expenses.ExpensesFragment">
 
     <TextView
         android:id="@+id/section_label"
