Add listing of expenses.

--- a/app/src/main/res/layout/view_empty_expenses.xml
+++ b/app/src/main/res/layout/view_empty_expenses.xml
@@ -9,5 +9,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="16dp"
-        android:text="@string/empty_contacts" />
+        android:text="@string/empty_expenses" />
+
 </FrameLayout>
