--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -34,6 +34,7 @@
             app:layout_constraintBottom_toTopOf="@+id/amount"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_contact_icon"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <com.google.android.material.textview.MaterialTextView
