--- a/app/src/main/res/layout/activity_contact_detail.xml
+++ b/app/src/main/res/layout/activity_contact_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.detail.ContactDetailActivity">
+    tools:context=".ui.detail.contact.ContactDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
